PR middle-end/78138 - missing warnings on buffer overflow with non-constant source length
gcc/testsuite/ChangeLog:

	PR middle-end/78138
	* gcc.dg/pr78138.c: New test. 


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244297 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-10  Martin Sebor  <msebor@redhat.com>
+
+	PR middle-end/78138
+	* gcc.dg/pr78138.c: New test. 
+
 2017-01-10  David Malcolm  <dmalcolm@redhat.com>
 
 	PR c++/77949
